# renovate-test

./: .nvmrc  Dockerfile  Gemfile  README.md  mygem.gemspec  myversionsfile.json  package.json  pnpm-lock.yaml  pyproject.toml  renovate-docker.json  renovate-js.json  renovate-python.json  renovate.json
.github/workflows/: eslint.yml
